--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "redux-logger": "^3.0.6",
     "webpack": "^4.3.0",
     "webpack-cli": "^2.0.13"
   },
@@ -22,6 +23,10 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "express": "^4.16.3",
+    "react": "^16.3.0",
+    "react-dom": "^16.3.0",
+    "react-redux": "^5.0.7",
+    "react-router": "^3.0.2",
     "redux": "^3.7.2"
   }
 }
