--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-preset-stage-1": "^6.24.1",
     "express": "^4.16.3",
     "react": "^16.3.0",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.0",
     "react-redux": "^5.0.7",
     "react-router": "^3.0.2",
